<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dip"
    android:background="@color/bg_dark">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_title_label"
        android:textColor="#AAAAAA"
        android:layout_marginTop="8dip"/>

    <EditText
        android:id="@+id/tag_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:singleLine="true"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_artist_label"
        android:textColor="#AAAAAA"
        android:layout_marginTop="8dip"/>

    <EditText
        android:id="@+id/tag_artist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:singleLine="true"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_album_label"
        android:textColor="#AAAAAA"
        android:layout_marginTop="8dip"/>

    <EditText
        android:id="@+id/tag_album"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:singleLine="true"/>

    <Button
        android:id="@+id/btn_save_tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dip"
        android:text="@string/save_tags"
        android:background="@drawable/btn_primary"
        android:textColor="#FFFFFF"/>
</LinearLayout>