<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_dark">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dip">

        <CheckBox
            android:id="@+id/eq_enable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_equalizer"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/preset"
            android:textColor="#AAAAAA"
            android:layout_marginTop="8dip"/>

        <Spinner
            android:id="@+id/preset_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/eq_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dip"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bass_boost"
            android:textColor="#AAAAAA"
            android:layout_marginTop="16dip"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/bass_boost"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1000"/>

            <TextView
                android:id="@+id/bass_value"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="0"/>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/virtualizer"
            android:textColor="#AAAAAA"
            android:layout_marginTop="8dip"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/virtualizer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1000"/>

            <TextView
                android:id="@+id/virtual_value"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="0"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset_eq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/reset"
            android:background="@drawable/btn_primary"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</ScrollView>